# salesforce-mcp

./: .gitignore  README.md  main.py  pyproject.toml
src/salesforce_mcp/objects/: AccountObject.py  LeadObject.py  OpportunityObject.py  SFObject.py
src/salesforce_mcp/services/: SalesforceSession.py
src/salesforce_mcp/types/: AccountRecord.py  LeadRecord.py  OpportunityRecord.py  SFRecord.py
src/salesforce_mcp/utils/: credentials.py  dataClassMapper.py  soql.py
tests/: test_opportunity_object.py  test_salesforce_session.py  test_sf_object.py  test_soql.py  test_utils.py
